# gamtools

./: .codeclimate.yml  .gitignore  .pylintrc  .travis.yml  CHANGELOG.md  CONTRIBUTORS.md  Gam_Matrix_README.md  LICENSE  MANIFEST.in  README  README.md  README.rst  circular_permute_segmentation.py  compare_segmentation.py  distance_matrix.py  extract_contamination.py  extract_fastqc.py  extract_segmentation.py  gam_coverage.py  gam_freq_matrix.py  gam_matrix.py  gam_process.py  gam_saturation.py  gap_size_distribution.py  generalized_enrichments.py  get_coverage_stats.py  get_matrices.sh  get_matrix.py  get_plots.py  get_threshold.py  mapping_stats.sh  merge_peaks.py  merge_stats.py  multiBAMcoverage2segmentation  new_threshold.py  normalise_bedgraph.py  npz_to_my5c.py  pass_qc.py  pcc_from_npz.py  pcc_from_segmentation.py  (+19 more)
CurveFitting/: __init__.py
GamTools/: __init__.py  coseg_3.pyx  cosegregation.py  cosegregation_frequency.pyx  cosegregation_internal.pyx  main.py  segmentation.py
docs/: Makefile  conf.py  gamtools.cosegregation.rst  gamtools.enrichment.rst  gamtools.matrix.rst  gamtools.segregation.rst  index.rst  make.bat
examples/: qc_parameters.example.cfg
gamtools/: call_windows.py  compaction.py  cosegregation.py  cosegregation_internal.c  cosegregation_internal.pyx  count_tables.py  enrichment.py  main.py  matrix.py  permutation.py  pipeline.py  plotting.py  radial_position.py  segmentation.py  segregation.py  select_samples.py  utils.py
gamtools2/: data.errosion.saturation.curves.py  window.calling.and.segregation.tables.py
slice/: slice.cpp
(+101 files in other folders)
